@@ -1587,12 +1587,12 @@ void DoitInit(//WS Output
 {
   if (!cloudbox_on)
   {
-    //CREATE_OUT0;
-    //doit_is_initialized = 0;
-    //out0 << "  Cloudbox is off, DOIT calculation will be skipped.\n";
-    //return;
-    throw runtime_error( "Cloudbox is off, no scattering calculations to be"
-                         "performed." );
+    CREATE_OUT0;
+    doit_is_initialized = 0;
+    out0 << "  Cloudbox is off, DOIT calculation will be skipped.\n";
+    return;
+    //throw runtime_error( "Cloudbox is off, no scattering calculations to be"
+    //                     "performed." );
   }
   
   // -------------- Check the input ------------------------------
@@ -2814,8 +2814,11 @@ void DoitCalc(
   
   if (!cloudbox_on)
   {
-    throw runtime_error( "Cloudbox is off, no scattering calculations to be"
-                         "performed." );
+    CREATE_OUT0;
+    out0 << "  Cloudbox is off, DOIT calculation will be skipped.\n";
+    return;
+    //throw runtime_error( "Cloudbox is off, no scattering calculations to be"
+    //                     "performed." );
   }
 
   //-------- Check input -------------------------------------------
